# pathway

./: .gitignore  CLAUDE.md  README.md  cleanup.sh  sprint.md
escrow-ui/: config-overrides.js  package-lock.json  package.json
escrow-ui/src/: App.css  App.tsx
escrow-ui/src/components/: ClaimReceiver.tsx  GiftSender.tsx
lz-oft/: Anchor.toml  pnpm-lock.yaml
lz-oft/deployments/sepolia-testnet/: MyOFT.json
lz-oft/deployments/solana-testnet/: OFT.json
my-lz-app/: Anchor.toml  CLAUDE.md  DEPLOYMENT.md  README.md  check-balance.js  configure-peers.js  configure-solana-peer.js  convert-solana.js  create-real-tx.js  hardhat.config.ts  layerzero.config.ts  package-lock.json  pnpm-lock.yaml  test-complete-flow.js  test_create_escrow.js  test_peer_config.js
my-lz-app/deployments/optimism-testnet/: MyOApp.json
my-lz-app/deployments/solana-testnet/: OApp.json
my-lz-app/evm-contracts/: hardhat.config.js  package-lock.json  package.json
my-lz-app/evm-contracts/contracts/: EscrowClaimerV2.sol  LayerZeroEscrowV2.sol  MockLZEndpoint.sol  WorkingOApp.sol
my-lz-app/evm-contracts/scripts/: configure-ethereum-peer.js  deploy-correct-eid.js  deploy-escrow-oapp.js  deploy-escrow.js  deploy-final-correct.js  deploy-fixed.js  deploy-layerzero-v2.js  deploy-oapp.js  deploy-simple.js  deploy-v2-fixed.js  deploy-working.js  test-real-cross-chain.js
my-lz-app/programs/oft/: Cargo.toml
solana/: .gitignore  Anchor.toml  package.json
solana/programs/escrow-locker/: Cargo.toml
solana/programs/escrow-locker/src/: lib.rs
solana/tests/: escrow-locker.ts
(+14 files in other folders)
