[package]
name = "escrow-locker"
version = "0.1.0"
description = "Cross-chain escrow with LayerZero V2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_locker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
